# CodeContextBuilder

./: .gitignore  README.md  pyproject.toml  setup.py
ccb/: cli.py  config.py  core.py
ccb/llm/: base.py  ollama.py  openai.py
ccb/parsers/: base.py  universal.py
